--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <section class="container-fluid min-vh-100 bg-primary">
       <div class="row text-center">
-        <h1 class="col-12 display-2 mt-5 ">
+        <h1 class="col-12 display-2 mt-5 animate__animated animate__shakeX">
           Generator Domain&#128561;
         </h1>
 
