--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <script src="./app.js" defer></script>
   </head>
   <body>
     <section class="container-fluid min-vh-100 bg-primary">
@@ -25,12 +32,22 @@
         </h1>
 
         <div class="col-12 mt-5 d-flex justify-content-center gap-4">
+          <!--input para dominio personalizado-->
+          <input
+            type="text"
+            class="form-control w-25"
+            placeholder="personalizado"
+            id="inputName"
+          />
+
           <select class="form-select selectOption" id="select" name="select">
+            <option value="auto">auto</option>
             <option value=".com">.com</option>
             <option value=".es">.es</option>
             <option value=".org">.org</option>
             <option value=".net">.net</option>
           </select>
+
           <button class="btn btn-light" id="btn">Gernerate</button>
           <button class="btn btn-danger" id="btnReset">Reset</button>
         </div>
@@ -39,12 +56,5 @@
         </div>
       </div>
     </section>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./app.js"></script>
   </body>
 </html>
